--- a/extras/mis_estilos.scss
+++ b/extras/mis_estilos.scss
@@ -16,6 +16,9 @@ $cg: #0F0F0F;
 // Friz Quadrata
 @import url('friz', 'fuentes/Friz Quadrata Bold.otf');
 
+// Nerd Font
+@import "https://www.nerdfonts.com/assets/css/webfont.css";
+
 /*-- scss:rules --*/
 
 // links de color blanco ($cb)
