--- a/extras/mis_estilos.scss
+++ b/extras/mis_estilos.scss
@@ -15,6 +15,8 @@ $cg: #0F0F0F;
 
 // Friz Quadrata Bold
 @import 'https://db.onlinewebfonts.com/c/9d476c89b917332f9a199fe50bbeb161?family=Friz+Quadrata+Bold';
+// @import url('https://fonts.cdnfonts.com/css/friz-quadrata');
+// @import url('https://fonts.cdnfonts.com/css/friz-quadrata-std');
 
 // Nerd Font
 @import "https://www.nerdfonts.com/assets/css/webfont.css";
