--- a/extras/mis_estilos.scss
+++ b/extras/mis_estilos.scss
@@ -14,8 +14,8 @@ $cg: #0F0F0F;
 @import url('https://fonts.googleapis.com/css2?family=Gloock&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 // Friz Quadrata Bold
-@import 'https://db.onlinewebfonts.com/c/9d476c89b917332f9a199fe50bbeb161?family=Friz+Quadrata+Bold';
-// @import url('https://fonts.cdnfonts.com/css/friz-quadrata');
+// @import 'https://db.onlinewebfonts.com/c/9d476c89b917332f9a199fe50bbeb161?family=Friz+Quadrata+Bold';
+@import url('https://fonts.cdnfonts.com/css/friz-quadrata');
 // @import url('https://fonts.cdnfonts.com/css/friz-quadrata-std');
 
 // Nerd Font
